--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@
 		<title>My Astro Site 2</title>
 	</head>
 	<body>
+		    <a href="/">Home</a>
+    <a href="/about/">About</a>
+    <a href="/blog/">Blog</a>
 		<h1>My Astro Site 3</h1>
 	</body>
 </html>
