--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,11 +1,15 @@
 ---
 import BaseLayout from './BaseLayout.astro';
+import PostTagCloud from '../components/PostTagCloud.astro';
 const { frontmatter } = Astro.props;
 ---
-<BaseLayout pageTitle={frontmatter.title}></BaseLayout>
+<BaseLayout pageTitle={frontmatter.title}>
 <p>{frontmatter.pubDate.toString().slice(0,10)}</p>
 <p><em>{frontmatter.description}</em></p>
 <p>Written by: {frontmatter.author}</p>
 <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+
+<PostTagCloud tags={frontmatter.tags}></PostTagCloud>
+
 <slot />
 </BaseLayout>
